--- a/supervisord.conf
+++ b/supervisord.conf
@@ -16,7 +16,7 @@ stderr_logfile_maxbytes=0
 [program:secrets]
 user=root
 directory=/
-command=source /secrets.sh
+command=/bin/bash -c 'source /secrets.sh'
 directory=/
 autostart=true
 autorestart=true
