--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,7 +4,7 @@ nodaemon=true
 [program:nginx]
 user=root
 directory=/
-command=/bin/bash -c '/docker-entrypoint.sh'
+command=nginx -g "daemon off;"
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
