--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,7 +4,7 @@ nodaemon=true
 [program:nginx]
 user=root
 directory=/
-command=nginx -g "daemon off;"
+command=/bin/bash -c 'nginx -g "daemon off;"'
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
