--- a/wordpress/supervisord.conf
+++ b/wordpress/supervisord.conf
@@ -3,8 +3,8 @@ nodaemon=true
 
 [program:wordpress]
 user=root
-directory=/opt/bitnami/scripts/apache
-command=/bin/bash -c '/opt/bitnami/scripts/apache/run.sh'
+directory=/
+command=/bin/bash -c 'apache2-foreground'
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
