--- a/wordpress/supervisord.conf
+++ b/wordpress/supervisord.conf
@@ -1,22 +1,10 @@
 [supervisord]
 nodaemon=true
 
-[program:secrets]
-user=root
-directory=/
-command=/bin/bash -c 'source /secrets.sh'
-directory=/
-autostart=true
-autorestart=true
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-
 [program:wordpress]
 user=root
 directory=/
-command=/bin/bash -c 'apache2-foreground'
+command=/bin/bash -c 'source /secrets.sh && apache2-foreground'
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
