--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,22 +1,11 @@
 [supervisord]
 nodaemon=true
 
-[program:secrets]
-user=root
-directory=/
-command=/bin/bash -c 'source /secrets.sh'
-directory=/
-autostart=true
-autorestart=true
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
 
 [program:nginx]
 user=root
 directory=/
-command=/bin/bash -c 'nginx -g "daemon off;"'
+command=/bin/bash -c 'source /secrets.sh && nginx -g "daemon off;"'
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
