--- a/wordpress/supervisord.conf
+++ b/wordpress/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:wordpress]
-user=root
+user=www-data
 directory=/
 command=/bin/bash -c 'source /secrets.sh && "apache2-foreground"'
 autostart=true
