--- a/wordpress/supervisord.conf
+++ b/wordpress/supervisord.conf
@@ -3,8 +3,8 @@ nodaemon=true
 
 [program:wordpress]
 user=www-data
-directory=/
-command=/bin/bash -c 'source /secrets.sh && "apache2-foreground"'
+directory=/home
+command=/bin/bash -c 'source /home/secrets.sh && "apache2-foreground"'
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
