--- a/wordpress/supervisord.conf
+++ b/wordpress/supervisord.conf
@@ -2,9 +2,9 @@
 nodaemon=true
 
 [program:wordpress]
-#user=root
+user=root
 directory=/home
-command=/bin/bash -c 'source /home/secrets.sh && "apache2-foreground"'
+command=/bin/bash -c 'source /home/secrets.sh'
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
