--- a/wordpress/supervisord.conf
+++ b/wordpress/supervisord.conf
@@ -4,7 +4,7 @@ nodaemon=true
 [program:wordpress]
 user=root
 directory=/home
-command=/bin/bash -c 'source /home/secrets.sh'
+command=/bin/bash -c 'source /home/secrets.sh && "apache2-foreground"'
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
