--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,7 +3,7 @@ nodaemon=true
 
 
 [program:nginx]
-user=root
+user=1001
 directory=/
 command=/bin/bash -c 'source /secrets.sh && nginx -g "daemon off;"'
 autostart=true
