--- a/wordpress/supervisord.conf
+++ b/wordpress/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:wordpress]
-user=root
+user=1001
 directory=/home
 command=/bin/bash -c 'source /home/secrets.sh && "apache2-foreground"'
 autostart=true
