--- a/wordpress/supervisord.conf
+++ b/wordpress/supervisord.conf
@@ -3,8 +3,8 @@ nodaemon=true
 
 [program:wordpress]
 #user=1001
-directory=/home
-command=/bin/bash -c 'source /home/secrets.sh && "apache2-foreground"'
+directory=/
+command=/bin/bash -c 'source /secrets.sh && /opt/bitnami/scripts/nginx-php-fpm/run.sh'
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
