--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -11,7 +11,7 @@ RUN chmod +x /secrets.sh
 
 COPY supervisord.conf /etc/supervisord.conf
 
-RUN > /supervisord.log && chown 1001:1001 /supervisord.log
+RUN > /supervisord.log && chown 1001:1001 /supervisord.log && > /wordpress.txt && 1001:1001 /wordpress.txt
 
 ## Revert to the original non-root user
 USER 1001
