--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -9,7 +9,9 @@ COPY secrets.sh /etc/profile.d/secrets.sh
 
 RUN chmod +x /etc/profile.d/secrets.sh && chown 1001:1001 /etc/profile.d/secrets.sh
 
-COPY supervisord.conf /etc/supervisord.conf                       # for testing secrets will should be stored in wordpress.txt                 
+COPY supervisord.conf /etc/supervisord.conf                       
+
+                                                                       # for testing secrets will should be stored in wordpress.txt                 
 
 RUN > /supervisord.log && chown 1001:1001 /supervisord.log && > /etc/profile.d/wordpress.txt && chown 1001:1001 /etc/profile.d/wordpress.txt && > /supervisord.pid && chown 1001:1001 /supervisord.pid
 
