--- a/wordpress/supervisord.conf
+++ b/wordpress/supervisord.conf
@@ -4,7 +4,7 @@ nodaemon=true
 [program:wordpress]
 #user=1001
 directory=/
-command=/bin/bash -c 'source /secrets.sh && /opt/bitnami/scripts/nginx-php-fpm/run.sh'
+command=/bin/bash -c 'source /secrets.sh && "apache2-foreground"'
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
