--- a/wordpress/docker-compose.yaml
+++ b/wordpress/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
       - 80:80
     restart: unless-stopped
     environment:
-      - WORDPRESS_DB_HOST=wordpress.cnvf8jqbx5pp.us-east-1.rds.amazonaws.com:3306
+      - WORDPRESS_DB_HOST=wordpress-instance-1.cogke6h6hkax.us-east-1.rds.amazonaws.com:3306
       - WORDPRESS_DB_USER="admin"
       - WORDPRESS_DB_PASSWORD="12345678"
       - WORDPRESS_DB_NAME="mysql"
