--- a/redmine/supervisord.conf
+++ b/redmine/supervisord.conf
@@ -1,10 +1,10 @@
 [supervisord]
 nodaemon=true
 
-[program:wordpress]
+[program:redmine]
 #user=1001
 directory=/
-command=/bin/bash -c 'source /secrets.sh && "apache2-foreground"'
+command=/bin/bash -c 'source /secrets.sh && "rails" "server" "-b" "0.0.0.0"'
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
