--- a/redmine/supervisord.conf
+++ b/redmine/supervisord.conf
@@ -4,7 +4,7 @@ nodaemon=true
 [program:redmine]
 #user=1001
 directory=/
-command=/bin/bash -c 'source /secrets.sh && "rails" "server" "-b" "0.0.0.0"'
+command=/bin/bash -c 'source /secrets.sh && rails server -b" "0.0.0.0"'
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
