--- a/redmine/Dockerfile
+++ b/redmine/Dockerfile
@@ -1,11 +1,7 @@
 FROM redmine:latest
 
-RUN apt update -y && apt install -y awscli jq supervisor procps
+RUN apt update -y && apt install -y awscli jq procps
 
 COPY secrets.sh /secrets.sh
 
 RUN chmod +x /secrets.sh
-
-COPY supervisord.conf /etc/supervisord.conf                       
-                                                                            
-CMD ["/usr/bin/supervisord", "-c", "/etc/supervisord.conf"]
