--- a/redmine/docker-compose.yaml
+++ b/redmine/docker-compose.yaml
@@ -1,11 +1,8 @@
 services:
-  wordpress:
+  redmine:
     image: redmine:latest
     ports:
       - 80:3000
     restart: unless-stopped
-    environment:
-      - REDMINE_SECRET_KEY_BASE=12345678
-      - REDMINE_DB_USERNAME=admin
-      - REDMINE_DB_PASSWORD=12345678
-      - REDMINE_DB_MYSQL=wordpress-instance-1.cogke6h6hkax.us-east-1.rds.amazonaws.com
+    env_file:
+      - /secrets
