--- a/redmine/Dockerfile
+++ b/redmine/Dockerfile
@@ -6,4 +6,4 @@ COPY secrets.sh /secrets.sh
 
 RUN chmod +x /secrets.sh
 
-CMD ["bash","-c","source /secrets.sh";"rails" "server" "-b" "0.0.0.0"]
+CMD ["rails" "server" "-b" "0.0.0.0"]
