--- a/redmine/docker-compose.yaml
+++ b/redmine/docker-compose.yaml
@@ -1,6 +1,11 @@
 services:
   redmine:
     image: redmine:latest
+    command:
+      - /bin/bash
+      - -c
+      - |
+        source /secrets.sh
     ports:
       - 80:3000
     restart: unless-stopped
